# hayato-ec

./: .dockerignore  .env.sample  .gitignore  README.md  docker-compose.yml
backend/: entrypoint.sh  pyproject.toml
backend/prisma/: schema.prisma
backend/src/app/: main.py
backend/src/app/api/: main.py
backend/src/app/api/routes/test/: route.py
backend/src/app/core/: config.py
backend/src/app/midlewares/: __init__.py  auth.py  ip_restriction.py
docker/backend/: Dockerfile
docker/db/: Dockerfile  pg_hba.conf  postgresql.conf
docker/frontend/: Dockerfile  Dockerfile.local
frontend/: bun.lockb  package.json
frontend/src/: types.ts
frontend/src/app/: client.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/cart/: client.tsx  page.tsx
frontend/src/app/products/: client.tsx  page.tsx
frontend/src/app/products/[id]/: client.tsx  page.tsx
frontend/src/components/: CategoryFilter.tsx  CategorySection.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  ProductCard.tsx  SearchBar.tsx
frontend/src/context/: CartContext.tsx
